# cmux-panecho

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Package.swift  README.md  SECURITY_REVIEW_REPORT_2026-04-28.md  THIRD_PARTY_LICENSES.md  biome.json  cmux-Bridging-Header.h  cmux.entitlements  cmux.nightly.entitlements  cmux.release.entitlements  fetch_ci.py  fetch_ci_logs.py  ghostty.h  package.json  panecho.release.entitlements  reports.md  resolve_conflicts.py
.asc/: workflow.json
Native/DiffSidecar/: Cargo.toml  README.md  rust-toolchain.toml
Native/DiffSidecar/src/: benchmark.rs  lib.rs  main.rs  manifest.rs  protocol.rs  server.rs
Native/DiffSidecar/tests/: server_integration.rs
Native/DiffSidecar/tests/support/: test_host.rs
cmux-tui/: Cargo.toml  README.md
cmux-tui/bindings/: RELEASING.md  generate.sh
cmux-tui/bindings/conformance/: e2e.sh  fixtures.json  runner.py
cmux-tui/bindings/go/: README.md  client.go  client_test.go  events.go  events_test.go  go.mod  types.go
cmux-tui/bindings/java/: README.md
cmux-tui/bindings/java/scripts/: build.sh
cmux-tui/bindings/python/: README.md  e2e.py  pyproject.toml
cmux-tui/bindings/python/cmux/: __init__.py  client.py
cmux-tui/bindings/python/tests/: test_events.py  test_protocol.py
cmux-tui/bindings/rust/: Cargo.toml  README.md
cmux-tui/bindings/rust/examples/: e2e.rs
cmux-tui/bindings/rust/src/: lib.rs
cmux-tui/bindings/styles/: java.md  python.md  rust.md  typescript.md
cmux-tui/bindings/typescript/: README.md  package-lock.json  package.json  tsconfig.json
cmux-tui/bindings/typescript/e2e/: e2e.ts
cmux-tui/bindings/typescript/src/: base64.ts  browser.ts  client.ts  errors.ts  index.ts  node-client.ts  node-transport.ts  transport.ts  types.ts  websocket-transport.ts
cmux-tui/bindings/typescript/test/: base64.test.ts  client.test.ts  protocol-types.ts  unix-transport.test.ts  websocket-transport.test.ts
cmux-tui/crates/cmux-tui/: Cargo.toml
cmux-tui/crates/cmux-tui-cdp/: Cargo.toml
cmux-tui/crates/cmux-tui-cdp/src/: chrome.rs  client.rs  lib.rs
cmux-tui/crates/cmux-tui-cdp/tests/: chrome_smoke.rs  fake_cdp.rs
cmux-tui/crates/cmux-tui-core/: Cargo.toml
cmux-tui/crates/cmux-tui-core/src/: browser.rs  event_bus.rs  layout.rs  lib.rs  model.rs  mux.rs  pairing.rs  platform.rs  provider_management.rs  server.rs  surface.rs
cmux-tui/crates/cmux-tui-core/tests/: browser_runtime.rs  pty.rs  websocket_transport.rs
cmux-tui/crates/cmux-tui-machine-protocol/: Cargo.toml
cmux-tui/crates/cmux-tui-machine-protocol/src/: lib.rs
cmux-tui/crates/cmux-tui/src/: app.rs  browser_input.rs  cli.rs  config.rs  host_colors.rs  localization.rs  machine.rs  machine_provider_client.rs  machine_provider_runtime.rs  machine_provider_transport.rs  machine_runtime.rs  main.rs  plugin_manager.rs  process_diagnostics.rs  provider_authority.rs  pty_input.rs
cmux-tui/crates/cmux-tui/tests/: cli.rs
cmux-tui/crates/ghostty-vt/: Cargo.toml
cmux-tui/crates/ghostty-vt-sys/: Cargo.toml  build.rs
cmux-tui/crates/ghostty-vt/src/: key.rs  lib.rs  mouse.rs  render.rs  terminal.rs
cmux-tui/crates/ghostty-vt/tests/: render_v7.rs  terminal.rs
cmux-tui/docs/: README.md  browser-panes.md  concepts.md  configuration.md  getting-started.md  keyboard.md  machines.md  mouse.md  protocol.md
cmux-tui/frontends/: README.ja.md  README.md
cmux-tui/frontends/web/: README.ja.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
cmux-tui/frontends/web/public/: manifest.json
cmux-tui/frontends/web/src/: App.tsx  i18n.ts  main.tsx  styles.css
cmux-tui/frontends/web/test/: attach-recovery.test.ts  attached-terminal-sizing.test.tsx  canvas-theme.test.ts  client-name.test.ts  clients-indicator.test.tsx  coalesced-refresh.test.ts  connect-screen.test.tsx  connection-defaults.test.ts  context-menu-nested.test.tsx  context-menu.test.ts  debounce.test.ts  fit.test.ts  frame-batch.test.ts  i18n.test.ts  key-encoding.test.ts  layout.test.ts  local-selection.test.ts  mobile.test.ts  protocol.test.ts  reconnect.test.ts  rename.test.ts  render-model.test.ts  render-styles.test.ts  render-terminal-sizing.test.tsx  render-terminal.test.tsx  scrollback.test.ts  terminal-colors.test.ts  terminal-pane-split-drag.test.tsx  terminal-selection.test.ts  tree.test.ts  tui-chrome.test.tsx  webgl-renderer.test.ts
cmux-tui/scripts/: measure-frames.py  smoke-attach.py  smoke-tui.py
cmux-tui/spec/: README.md  bindings.md  cli.md  commands.md  events.md  frontends.md  machine-provider.md  plugins.md  render.md  transports.md
experiments/iroh-byte-transport/: Cargo.toml  README.md
experiments/iroh-byte-transport/src/: main.rs
experiments/iroh-swift-ffi-spike/rust/: Cargo.toml
experiments/iroh-swift-ffi-spike/rust/src/: lib.rs
mux/: Cargo.toml  README.md
mux/bindings/: generate.sh
mux/bindings/conformance/: e2e.sh  fixtures.json  runner.py
mux/bindings/go/: README.md  client.go  events.go  go.mod  types.go
mux/bindings/java/: README.md
mux/bindings/python/: README.md  e2e.py  pyproject.toml
mux/bindings/python/cmux/: __init__.py  client.py
mux/bindings/rust/: Cargo.toml  README.md
mux/bindings/rust/examples/: e2e.rs
mux/bindings/styles/: go.md  python.md  typescript.md
mux/bindings/typescript/: README.md  package-lock.json  package.json  tsconfig.json
mux/crates/ghostty-vt/: Cargo.toml
mux/crates/ghostty-vt-sys/: Cargo.toml  build.rs
mux/crates/mux-cdp/: Cargo.toml
mux/crates/mux-core/: Cargo.toml
mux/crates/mux-tui/: Cargo.toml
mux/docs/: README.md  browser-panes.md  concepts.md  configuration.md  getting-started.md  keyboard.md  mouse.md  protocol.md
mux/scripts/: measure-frames.py  smoke-attach.py  smoke-tui.py
mux/spec/: README.md  bindings.md  cli.md  commands.md  events.md  transports.md
services/iroh-relay-minter/: .env.example  .gitignore  Cargo.toml  README.md
services/iroh-relay-minter/api/: relay-token.rs
services/iroh-relay-minter/examples/: loopback.rs
services/iroh-relay-minter/src/: lib.rs
(+3711 files in other folders)
