[workspace]
resolver = "2"
members = [
    "bindings/rust",
    "crates/ghostty-vt-sys",
    "crates/ghostty-vt",
    "crates/cmux-tui-cdp",
    "crates/cmux-tui-core",
    "crates/cmux-tui-machine-protocol",
    "crates/cmux-tui",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
redundant_clone = "warn"
# Evaluated and dropped: needless_pass_by_value causes signature churn across cmux-tui-core call sites.

[workspace.dependencies]
ghostty-vt-sys = { path = "crates/ghostty-vt-sys" }
ghostty-vt = { path = "crates/ghostty-vt" }
cmux-tui-core = { path = "crates/cmux-tui-core" }
cmux-tui-cdp = { path = "crates/cmux-tui-cdp" }
cmux-tui-machine-protocol = { path = "crates/cmux-tui-machine-protocol" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
portable-pty = "0.9"
crossterm = "0.29"
ratatui = "0.30"
unicode-width = "0.2"
unicode-segmentation = "1"
base64 = "0.22"
libc = "0.2"
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
uds_windows = "1.2"
regex = "1"
bindgen = "0.72"
smallvec = "1"
getrandom = "0.3"
zeroize = "1.9"

[profile.release]
lto = "thin"

# Debug builds are what mux-dev dogfood runs; opt-level 0 makes the
# per-frame render/diff path visibly laggy. Light optimization for our
# code, full for dependencies (ratatui/crossterm do the heavy lifting).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
