[package]
name = "cmux-iroh-relay-minter"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
publish = false
autobins = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "relay-token"
path = "api/relay-token.rs"

[dependencies]
base64 = "0.22.1"
data-encoding = "2.9.0"
hex = "0.4.3"
hmac = "0.12.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1"] }
iroh = { version = "=1.0.0", default-features = false }
iroh-services = { version = "=1.0.0", default-features = false }
rcan = "=0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
vercel_runtime = "=2.0.0"
zeroize = "1.8.1"

[dev-dependencies]
futures-util = "0.3.31"
hyper-util = { version = "0.1.17", features = ["server", "http1", "tokio"] }
tokio = { version = "1.47.1", features = ["net"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
