[package]
name = "cmux-client"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rust client for the cmux-tui terminal multiplexer control protocol"
repository = "https://github.com/manaflow-ai/cmux"
homepage = "https://github.com/manaflow-ai/cmux/tree/main/cmux-tui/bindings/rust"
publish = true

[lints]
workspace = true

[dependencies]
libc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
