[package]
name = "cmux-tui-cdp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Synchronous Chrome DevTools Protocol transport and Chrome lifecycle for cmux-tui"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde_json.workspace = true
tungstenite.workspace = true
