[package]
name = "cmux-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "cmux-tui: tmux-like terminal multiplexer TUI backed by libghostty-vt"

[lints]
workspace = true

[[bin]]
name = "cmux-tui"
path = "src/main.rs"

[dependencies]
ghostty-vt.workspace = true
cmux-tui-core.workspace = true
cmux-tui-machine-protocol.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
base64.workspace = true
getrandom.workspace = true
libc.workspace = true
smallvec.workspace = true
zeroize.workspace = true
