[package]
name = "ghostty-vt-sys"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Raw FFI bindings to libghostty-vt, built from the vendored ghostty submodule via zig"
links = "ghostty-vt"

[lints]
workspace = true

[build-dependencies]
bindgen.workspace = true
