[package]
name = "mux-cdp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Synchronous Chrome DevTools Protocol transport and Chrome lifecycle for cmux-mux"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tungstenite.workspace = true
