[package]
name = "mux-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Terminal multiplexer core: workspaces, tabs, panes, PTY runtime, control socket"

[dependencies]
ghostty-vt.workspace = true
mux-cdp.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
base64.workspace = true
libc.workspace = true
regex.workspace = true

[target.'cfg(windows)'.dependencies]
uds_windows.workspace = true

[dev-dependencies]
tungstenite.workspace = true
