[package]
name = "mux-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "cmux-mux: tmux-like terminal multiplexer TUI backed by libghostty-vt"

[[bin]]
name = "cmux-mux"
path = "src/main.rs"

[dependencies]
ghostty-vt.workspace = true
mux-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
unicode-width.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
libc.workspace = true
